phoenix/static/css/map.css
#map {
    position: relative;
    left: 0px;
    top: 0px; 
    width: 800px;
    height: 500px;
    z-index: 0; /* Ensure pop-ups appear above the map! */ 
}
.totalwidth{
    width: 900px;
}

input[type=text]{
    width:40px;
}

#wmsurl{
    width:760px;
}

.nameField
{
    width:200px !important;
}

.timeField{
    width:170px !important;
}
input[type=range]{
    margin-left:0px;
    width:820px;
}

.horizontal{
    display:inline-block;
    white-space:nowrap;
    vertical-align:top;
}
.vertical{
   float:left;
   column-count:1;
}


#maxcol,#mincol{
   margin-top:-15px;
   margin-bottom:0;
   z-index:1;
}
.spacercol{
    height: 100px;
    line-height:100px;
    z-index: 0;
}

.spacercol:nth-of-type(1){
    margin-top:-15px;
}

.spacercol span{
    line-height:normal;
}


label{
    white-space:nowrap;
    display:inline;
}



#AnimateProgress{
    display: none;/*hide on start*/
}

select {
    width: auto;
}

.legend{
    width: 50px;
}

#legendimg{
    height: 500px;
}

.mirrorimage{
    -moz-transform: scale(1, -1);
    -webkit-transform: scale(1, -1);
    transform: scale(1, -1);
}

